fixed hero-image overflow

--- a/ui.apps/src/main/content/jcr_root/apps/we-retail/components/content/hero-image/clientlibs/less/hero-image.less
+++ b/ui.apps/src/main/content/jcr_root/apps/we-retail/components/content/hero-image/clientlibs/less/hero-image.less
@@ -1,5 +1,9 @@
 @import (reference) "/etc/designs/we-retail/clientlib-site/less/main.less";
 
+.hero-image.image {
+    overflow: visible;
+}
+
 .we-HeroImage {
     &:extend(.jumbotron);
 
